# bazel_go_setup

./: .gitignore  BUILD  BUILD.bazel  MODULE.bazel  README.md  go.mod
cmd/driver/: BUILD.bazel  main.go
internal/evm/: BUILD  BUILD.bazel  evm.go  evm_test.go
proto/: BUILD  BUILD.bazel  evm.proto
