load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "driver_lib",
    srcs = ["main.go"],
    importpath = "bazel_go_setup/cmd/driver",
    visibility = ["//visibility:private"],
    deps = ["//internal/evm"],
)

go_binary(
    name = "driver",
    embed = [":driver_lib"],
    visibility = ["//visibility:public"],
)
